# fint-stack-generator-gui

./: CMakeLists.txt  MacOSXBundleInfo.plist.in  StackConfig.cpp  StackConfig.h  StackFile.cpp  StackFile.h  StackGeneratorConfig.cpp  StackGeneratorConfig.h  dialog.cpp  dialog.h  dialog.ui  fint-stack-generator-gui.pro  fint.icns  main.cpp  main.qrc
